MSS-1613-bugfix-alignment

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_productTiles.scss
@@ -73,6 +73,10 @@
       .product-badge {
         display: block;
       }
+      &.eyewear-tile-height {
+        height: rem(280);
+        overflow: hidden;
+      }
     }
   
     .tile-body {
@@ -568,8 +572,4 @@
   }
   .adjust-badges-allignent {
     height: rem(25);
-  }
-  .eyewear-tile-height {
-    height: rem(280);
-    overflow: hidden;
   }
